fix: Insert cropped version of the Hero image so it is better positioned on larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ main {
 #hero {
     height: 500px;
     width: 100%;
-    background: url("../images/hero1.avif") no-repeat center center/cover;
+    background: url("../images/hero2.jpg") no-repeat center center/cover;
     position: relative;
 }
 
